--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tensorflow-models/hand-pose-detection": "^2.0.1",
     "@tensorflow/tfjs": "^4.11.0",
     "firebase": "^10.5.0",
+    "primeflex": "^3.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
